--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/next-auth": "^3.15.0",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.11.1",
     "fs": "^0.0.1-security",
     "lucide": "^0.447.0",
     "lucide-react": "^0.441.0",
