--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@solana/web3.js": "^1.91.8",
     "@types/next-auth": "^3.15.0",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.1",
     "fs": "^0.0.1-security",
@@ -33,6 +34,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
+    "tailwind-merge": "^2.5.3",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
